--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@headlessui/react": "^2.2.6",
+    "@mui/lab": "^7.0.0-beta.16",
+    "@mui/material": "^7.3.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.11",
     "next": "15.4.4",
@@ -17,6 +21,7 @@
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-photo-album": "^3.1.0",
     "react-type-animation": "^3.2.0"
   },
   "devDependencies": {
