--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.11",
     "next": "15.4.4",
+    "next-intl": "^4.3.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-icons": "^5.5.0",
