--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@mui/material": "^7.3.1",
     "embla-carousel-react": "^8.6.0",
     "framer-motion": "^12.23.11",
-    "next": "15.4.4",
+    "next": "^15.5.2",
     "next-intl": "^4.3.6",
     "react": "19.1.0",
     "react-dom": "19.1.0",
@@ -31,8 +31,10 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.4",
+    "@typescript-eslint/eslint-plugin": "^8.42.0",
+    "@typescript-eslint/parser": "^8.42.0",
+    "eslint": "^9.35.0",
+    "eslint-config-next": "^15.5.2",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
